--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -399,6 +399,10 @@ transition: all 0.3s ease;
 
 /* footer */
 
+.footer__prod {
+    margin-top: 5%;
+    padding-top: 5%;
+}
 
 .footer__link {
 display: flex;
@@ -412,7 +416,7 @@ font-size: 3em;
 text-align: center;
 color: #fff;
 -webkit-text-stroke: 1px #000;
-margin: 5% 0 0 0;
+margin: auto;
 }
 
 footer p{
@@ -424,7 +428,6 @@ padding: 3%;
 
 .footer__link a{
 color: #fff;
-padding: 1% 5%;
 }
 
 .footer__link a:hover {
