--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -399,8 +399,7 @@ transition: all 0.3s ease;
 
 /* footer */
 
-.footer__prod {
-    margin-top: 5%;
+.footer__prod h2 {
     padding-top: 5%;
 }
 
@@ -408,7 +407,7 @@ transition: all 0.3s ease;
 display: flex;
 flex-direction: row;
 justify-content: center;
-margin: auto;
+margin:auto;
 }
 
 footer h2{
@@ -417,17 +416,19 @@ text-align: center;
 color: #fff;
 -webkit-text-stroke: 1px #000;
 margin: auto;
+padding: 2%;
 }
 
 footer p{
 font-size: 1.2em;
 text-align: center;
 color: #fff;
-padding: 3%;
+padding: 1% 3%;
 }
 
 .footer__link a{
 color: #fff;
+padding: 0 5%;
 }
 
 .footer__link a:hover {
