--- a/frontend/css/prod.css
+++ b/frontend/css/prod.css
@@ -41,8 +41,8 @@ form span{
 
 .inventory__container {
     background-color: #282b29;
-    margin: 5% 1% 5%;
-    padding: 3% 3%;
+    margin: 0 0 10%;
+    padding: 1% 3%;
     display: grid;
     grid-column-gap: 3%;
     grid-row-gap: 3%;
@@ -221,7 +221,7 @@ form span{
 .inventory__container {
     display: flex;
     flex-wrap: wrap;
-    margin: auto;
+    margin: 5% 2%;
 }  
 
 .featured__card--button {
@@ -244,6 +244,7 @@ form span{
     font-size: 2.5em;
     -webkit-text-stroke: 1px #000; 
     margin: auto;
+    padding-left: 2%;
 }
 
 .filter__container form {
