--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -328,7 +328,6 @@ transition: all 0.3s ease;
 @media screen and (max-width: 800px) {
 .main__content{
     width: 100vw;
-    height: 30px;
     align-self: center;
 }
 
@@ -340,6 +339,10 @@ transition: all 0.3s ease;
     height:auto;
 }
 
+.featured__container{
+    margin:auto;
+    max-width: 90%;
+}
 
 
 }
@@ -457,7 +460,7 @@ margin: auto;
 
 .contact__container input[type=text], select, textarea {
 width: 100%;
-padding: 12px;
+padding: 10px;
 border: 1px solid #ccc;
 border-radius: 4px;
 box-sizing: border-box;
@@ -515,7 +518,6 @@ border: none;
 border-radius: 4px;
 cursor: pointer;
 width: 80%;
-margin-left: 10%;
 }
 
 input[type=submit]:hover {
@@ -542,7 +544,6 @@ padding: 2%;
 .contact__container {
 text-align: center;
 display: inline-block;
-margin: 0 5%;
 }
 
 
